--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -233,32 +233,32 @@ a:hover {
 
 @media (min-width: 411px) {
   .card .title {
-    font-size: 0.8em;
+    font-size: 0.3em;
   }
 }
 
 @media (min-width: 365px) {
   .card .title {
-    font-size: 1em;
+    font-size: 0.35em;
   }
 }
 
 @media (min-width: 425px) {
   .card .title {
-    font-size: 1.3em;
+    font-size: 0.5em;
   }
 }
 
 @media (min-width: 554px) {
   .card .title {
-    font-size: 1.5em;
+    font-size: 0.6em;
   }
 }
 
 @media (min-width: 60rem) {
   .card .title {
-    padding-bottom: 4rem;
-    font-size: 1.2em;
+    padding-bottom: 2rem;
+    font-size: 1em;
   }
 }
 
@@ -536,8 +536,8 @@ ul {
     margin-right: 20px;
   }
   .card .title-div {
-    padding-bottom: 7rem;
-    font-size: 2rem;
+    padding-bottom: 4rem;
+    font-size: 1rem;
   }
 }
 
@@ -589,6 +589,46 @@ ul {
     display: flex;
     flex-direction: column-reverse;
   }
+}
+
+/* For mobile screens */
+@media (max-width: 480px) {
+
+.dropdown {
+padding-right: 1rem;
+}
+
+.godown {
+padding-top: 5rem;
+padding-left: 1rem;
+}
+
+.projectcards {
+flex-direction: column;
+}
+
+.card {
+width: 90%;
+margin: 1rem auto;
+}
+
+}
+
+/* For larger monitors */
+@media (min-width: 1200px) {
+
+.container {
+max-width: 1140px;
+}
+
+.card {
+width: 30%;
+}
+
+.skill-card {
+width: 20%;
+}
+
 }
 
 /*
